tests/ui/coroutine/gen_block.e2024.stderr
error[E0658]: yield syntax is experimental
  --> $DIR/gen_block.rs:15:16
   |
LL |     let _ = || yield true;
   |                ^^^^^^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(coroutines)]` to the crate attributes to enable

error[E0282]: type annotations needed
  --> $DIR/gen_block.rs:6:17
   |
LL |     let x = gen {};
   |                 ^^ cannot infer type

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0658.
For more information about an error, try `rustc --explain E0282`.
